@@ -1,6 +1,10 @@
 package ua.nechay.bback.controllers;
 
 import org.springframework.http.MediaType;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -14,21 +18,23 @@ import ua.nechay.bback.dto.responses.RegistrationResponseException;
 import ua.nechay.bback.dto.responses.RegistrationResponse;
 import ua.nechay.bback.service.UserService;
 
-import java.util.Collections;
 import java.util.Optional;
+import java.util.Set;
 
 /**
  * @author anechaev
  * @since 17.04.2022
  */
 @RestController
-@RequestMapping("/register")
+@RequestMapping(RegistrationController.REGISTER_PATH)
 public class RegistrationController {
-
+    public static final String REGISTER_PATH = "/register";
     private final UserService userService;
+    private final AuthenticationManager authenticationManager;
 
-    public RegistrationController(UserService service) {
+    public RegistrationController(UserService service, AuthenticationManager authenticationManager) {
         this.userService = service;
+        this.authenticationManager = authenticationManager;
     }
 
     @PostMapping(consumes = MediaType.APPLICATION_JSON_VALUE, produces = MediaType.APPLICATION_JSON_VALUE)
@@ -43,9 +49,12 @@ public class RegistrationController {
             .setEMail(request.getEmail())
             .setExperience(0)
             .setLevel(1)
-            .setRoles(Collections.singleton(BBackUserRole.DEFAULT_USER))
+            .setRoles(Set.of(BBackUserRole.DEFAULT_USER, BBackUserRole.GLOBAL_ADMINISTRATOR))
             .build();
         userService.save(user);
+        Authentication authentication = authenticationManager.authenticate(
+            new UsernamePasswordAuthenticationToken(user, request.getPassword(), user.getAuthorities()));
+        SecurityContextHolder.getContext().setAuthentication(authentication);
         return RegistrationResponse.createGenericResponse(true);
     }
 }
